1. 通过自定义模板标签完成文章列表、日期归档、文章分类、标签云的自动渲染

--- a/test01/test01_blog/templates/blog/detail.html
+++ b/test01/test01_blog/templates/blog/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load blog_extras%}
 {% block main %}
     <div class="content-body">
         <div class="container">
@@ -85,94 +86,21 @@
                 <aside class="col-md-4">
                     <div class="widget widget-content">
                         <h3 class="widget-title">文章目录</h3>
-{#                        1.从前端完成文章目录的生成与否#}
-{#                        {% if post.toc %}#}
-{#                            {{ post.toc |safe }}#}
-{#                        {% else %}#}
-{#                            <div>''</div>#}
-{#                        {% endif %}#}
-{#                        2. 后端处理空目录#}
-                        {{ post.toc }}
-                    </div>
-                    <div class="widget widget-recent-posts">
-                        <h3 class="widget-title">最新文章</h3>
-                        <ul>
-                            <li>
-                                <a href="#">Django 博客开发入门教程：前言</a>
-                            </li>
-                            <li>
-                                <a href="#">Django 博客使用 Markdown 自动生成文章目录</a>
-                            </li>
-                            <li>
-                                <a href="#">部署 Django 博客</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="widget widget-archives">
-                        <h3 class="widget-title">归档</h3>
-                        <ul>
-                            <li>
-                                <a href="#">2017 年 5 月</a>
-                            </li>
-                            <li>
-                                <a href="#">2017 年 4 月</a>
-                            </li>
-                            <li>
-                                <a href="#">2017 年 3 月</a>
-                            </li>
-                        </ul>
+                        {#                        1.从前端完成文章目录的生成与否#}
+                        {#                        {% if post.toc %}#}
+                        {#                            {{ post.toc |safe }}#}
+                        {#                        {% else %}#}
+                        {#                            <div>''</div>#}
+                        {#                        {% endif %}#}
+                        {#                        2. 后端处理空目录#}
+                        {{ post.toc |safe}}
                     </div>
 
-                    <div class="widget widget-category">
-                        <h3 class="widget-title">分类</h3>
-                        <ul>
-                            <li>
-                                <a href="#">Django 博客教程 <span class="post-count">(13)</span></a>
-                            </li>
-                            <li>
-                                <a href="#">Python 教程 <span class="post-count">(11)</span></a>
-                            </li>
-                            <li>
-                                <a href="#">Django 用户认证 <span class="post-count">(8)</span></a>
-                            </li>
-                        </ul>
-                    </div>
+{% show_recent_posts %}
+{% show_archives %}
+{% show_categories %}
 
-                    <div class="widget widget-tag-cloud">
-                        <h3 class="widget-title">标签云</h3>
-                        <ul>
-                            <li>
-                                <a href="#">Django</a>
-                            </li>
-                            <li>
-                                <a href="#">Python</a>
-                            </li>
-                            <li>
-                                <a href="#">Java</a>
-                            </li>
-                            <li>
-                                <a href="#">笔记</a>
-                            </li>
-                            <li>
-                                <a href="#">文档</a>
-                            </li>
-                            <li>
-                                <a href="#">AngularJS</a>
-                            </li>
-                            <li>
-                                <a href="#">CSS</a>
-                            </li>
-                            <li>
-                                <a href="#">JavaScript</a>
-                            </li>
-                            <li>
-                                <a href="#">Snippet</a>
-                            </li>
-                            <li>
-                                <a href="#">jQuery</a>
-                            </li>
-                        </ul>
-                    </div>
+                    {% show_tag_cloud %}
                     <div class="rss">
                         <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>
                     </div>
