--- a/test01/test01_blog/templates/base.html
+++ b/test01/test01_blog/templates/base.html
@@ -95,7 +95,7 @@
     </nav>
 </div>
 
-<script src="js/script.js"></script>
+<script src="{% static 'blog/js/script.js' %}"></script>
 
 </body>
 </html>
