--- a/test01/test01_blog/templates/blog/index.html
+++ b/test01/test01_blog/templates/blog/index.html
@@ -9,7 +9,7 @@
                     <article class="post post-1">
                     <header class="entry-header">
                         <h1 class="entry-title">
-                            <a href="{{post.get_abs_url}}">{{ post.title }}</a>
+                            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
                         </h1>
                         <div class="entry-meta">
                             <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
@@ -23,7 +23,8 @@
                     <div class="entry-content clearfix">
                         <p>{{post.excerpt}}</p>
                         <div class="read-more cl-effect-14">
-                            <a href="#{{ post.get_abs_url }}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
+                            <a href="#{{ post.get_absolute_url }}" class="more-link">继续阅读 <span
+                                    class="meta-nav">→</span></a>
                         </div>
                     </div>
                 </article>
