1.完善归档、分类、标签云 三块的过滤展示功能

--- a/test01/test01_blog/templates/blog/inclusions/_archives.html
+++ b/test01/test01_blog/templates/blog/inclusions/_archives.html
@@ -3,7 +3,7 @@
   <ul>
     {% for date in date_list %}
       <li>
-        <a href="#">{{ date.year }} 年 {{ date.month }} 月</a>
+          <a href="{% url 'blog:archives' year=date.year month=date.month %}">{{ date.year }} 年 {{ date.month }} 月</a>
       </li>
     {% empty %}
       暂无归档！
