--- a/test01/test01_blog/templates/blog/inclusions/_tag_cloud.html
+++ b/test01/test01_blog/templates/blog/inclusions/_tag_cloud.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for tag in tags %}
                         <li>
-                            <a href="#">{{tag}}</a>
+                            <a href="{% url 'blog:tags' pk=tag.pk %}">{{ tag }}</a>
                         </li>
                         {% endfor %}
                     </ul>
