--- a/test02/test02_blog/templates/blog/inclusions/_archives.html
+++ b/test02/test02_blog/templates/blog/inclusions/_archives.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="widget widget-archives">
+  <h3 class="widget-title">归档</h3>
+  <ul>
+    {% for date in archives %}
+      <li>
+          <a href="{% url 'blog:archives' year=date.year month=date.month %}">{{ date.year }} 年 {{ date.month }} 月</a>
+      </li>
+    {% empty %}
+      暂无归档！
+    {% endfor %}
+  </ul>
+</div>
