--- a/test02/test02_blog/templates/blog/inclusions/_categories.html
+++ b/test02/test02_blog/templates/blog/inclusions/_categories.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="widget widget-category">
+    <h3 class="widget-title">分类</h3>
+    <ul>
+        {% for category in categories %}
+            <li>
+                <a href="{% url 'blog:category' pk=category.pk %}">{{ category.name }}</a>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
