--- a/test02/test02_blog/templates/blog/inclusions/_recent_posts.html
+++ b/test02/test02_blog/templates/blog/inclusions/_recent_posts.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="widget widget-recent-posts">
+  <h3 class="widget-title">最新文章</h3>
+  <ul>
+    {% for post in recent_posts_list %}
+      <li>
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+      </li>
+    {% empty %}
+      暂无文章！
+    {% endfor %}
+  </ul>
+</div>
