--- a/test02/test02_blog/templates/blog/index.html
+++ b/test02/test02_blog/templates/blog/index.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% load blog_extras %}
-{% block main %}
-    <div class="content-body">
-        <div class="container">
-            <div class="row">
+
+
+            {% block main %}
                 <main class="col-md-8">
                     {% for post in post_list %}
                         <article class="post post-1">
@@ -56,17 +55,15 @@
                         </ul>
                     </div>
                 </main>
-                <aside class="col-md-4">
-
-                    {% show_recent_posts %}
+            {% endblock %}
+{#                <aside class="col-md-4">#}
+{##}
+{#                    {% show_recent_posts %}#}
 {#                    {% show_archives %}#}
 {#                    {% show_categories %}#}
-{#                    {% show_tag_cloud %}#}
-                    <div class="rss">
-                        <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>
-                    </div>
-                </aside>
-            </div>
-        </div>
-    </div>
-{% endblock %}
+{#                    {% show_tags %}#}
+{#                    <div class="rss">#}
+{#                        <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>#}
+{#                    </div>#}
+{#                </aside>#}
+
