1. 修改首页摘要显示

--- a/test03/test03_blog/templates/blog/index.html
+++ b/test03/test03_blog/templates/blog/index.html
@@ -20,7 +20,7 @@
                         </div>
                     </header>
                     <div class="entry-content clearfix">
-                        {{ post.body }}
+                        {{ post.excerpt }}
                         <div class="read-more cl-effect-14">
                             <a href="{{ post.get_absolute_url }}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
                         </div>
