1. 完成归档、分类、标签功能的筛选

--- a/test03/test03_blog/templates/blog/extras/_archives.html
+++ b/test03/test03_blog/templates/blog/extras/_archives.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for archive in archives %}
                         <li>
-                            <a href="#">{{ archive.year }} 年-{{ archive.month }}月</a>
+                            <a href="{% url 'blog:archives' archive.year archive.month %}">{{ archive.year }} 年-{{ archive.month }}月</a>
                         </li>
                         {% empty %}
                             <div>暂无归档</div>
