--- a/test03/test03_blog/templates/blog/extras/_show_recent_post.html
+++ b/test03/test03_blog/templates/blog/extras/_show_recent_post.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for post in recent_post_list %}
                         <li>
-                            <a href="#">{{ post.title}}</a>
+                            <a href="{% url 'blog:detail' pk=post.pk %}">{{ post.title}}</a>
                         </li>
                         {% empty %}
                             <div>暂无文章</div>
