--- a/test03/test03_blog/templates/blog/extras/_tags.html
+++ b/test03/test03_blog/templates/blog/extras/_tags.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for tag in tags %}
                         <li>
-                            <a href="#">{{tag}}</a>
+                            <a href="{% url 'blog:tag' pk=tag.pk %}">{{tag}}</a>
                         </li>
                         {% empty %}
                         <div>暂无标签</div>
