--- a/test04/test04/templates/blog/extras/_categories.html
+++ b/test04/test04/templates/blog/extras/_categories.html
@@ -3,7 +3,8 @@
                     <ul>
                         {% for cate in categories %}
                         <li>
-                            <a href="#">{{ cate.name }}<span class="post-count">(13)</span></a>
+                            <a href="{% url 'blog:category' cate.pk %}">{{ cate.name }}<span
+                                    class="post-count">(13)</span></a>
                         </li>
                         {% empty %}
                             <div>暂无分类</div>
