--- a/test05/test05/templates/base.html
+++ b/test05/test05/templates/base.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="index.html"><b>Black</b> &amp; White</a></h1>
+                    <h1><a href="{% url 'blog:index' %}"><b>Black</b> &amp; White</a></h1>
                 </div>
             </div><!-- col-md-4 -->
             <div class="col-md-8 col-sm-7 col-xs-4">
@@ -70,6 +70,9 @@
 
             {% endblock %}
             <aside class="col-md-4">
+                {% block toc %}
+
+                {% endblock %}
                 <div class="widget widget-recent-posts">
                     <h3 class="widget-title">最新文章</h3>
                     <ul>
