--- a/test05/test05/templates/blog/index.html
+++ b/test05/test05/templates/blog/index.html
@@ -7,10 +7,10 @@
                 <article class="post post-{{ post.pk }}">
                     <header class="entry-header">
                         <h1 class="entry-title">
-                            <a href="detail.html">{{post.title}}</a>
+                            <a href="{{post.get_absolute_url}}">{{post.title}}</a>
                         </h1>
                         <div class="entry-meta">
-                            <span class="post-category"><a href="#">{{post.category}}</a></span>
+                            <span class="post-category"><a href="{{ post.get_absolute_url }}">{{post.category}}</a></span>
                             <span class="post-date"><a href="#"><time class="entry-date"
                                                                       datetime="{{ post.create_time }}">{{post.create_time}}</time></a></span>
                             <span class="post-author"><a href="#">{{post.author}}</a></span>
@@ -21,7 +21,7 @@
                     <div class="entry-content clearfix">
                         <p>{{post.excerpt}}</p>
                         <div class="read-more cl-effect-14">
-                            <a href="#" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
+                            <a href="{{ post.get_absolute_url }}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
                         </div>
                     </div>
                 </article>
