完成自定义标签的跳转url

--- a/test05/test05/templates/blog/inclusions/_categories.html
+++ b/test05/test05/templates/blog/inclusions/_categories.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for cate in categories %}
                         <li>
-                            <a href="#">{{cate.name}} <span class="post-count"></span></a>
+                            <a href="{% url 'blog:category' cate.pk %}">{{cate.name}} <span class="post-count"></span></a>
                         </li>
                         {% empty %}
                         <div>暂无分类</div>
