--- a/test05/test05/templates/blog/inclusions/_archives.html
+++ b/test05/test05/templates/blog/inclusions/_archives.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for date in archives %}
                         <li>
-                            <a href="#">{{ date.year }} 年 {{date.month}} 月</a>
+                            <a href="{% url 'blog:archive' date.year date.month %}">{{ date.year }} 年 {{date.month}} 月</a>
                         </li>
                         {% empty %}
                         <div>暂无归档</div>
