--- a/test05/test05/templates/blog/inclusions/_recent_post.html
+++ b/test05/test05/templates/blog/inclusions/_recent_post.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for post in post_list %}
                         <li>
-                            <a href="#">{{post.title}}</a>
+                            <a href="{{post.get_absolute_url}}">{{post.title}}</a>
                         </li>
                         {% empty %}
                         <div>暂无文章</div>
