--- a/test05/test05/templates/blog/inclusions/_tags.html
+++ b/test05/test05/templates/blog/inclusions/_tags.html
@@ -3,7 +3,7 @@
                     <ul>
                         {% for tag in tags %}
                         <li>
-                            <a href="#">{{ tag.name }}</a>
+                            <a href="{% url 'blog:tag' tag.pk %}">{{ tag.name }}</a>
                         </li>
                         {% empty %}
                             <div>暂无标签</div>
