--- a/test05/test05/templates/blog/detail.html
+++ b/test05/test05/templates/blog/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load comment_extras %}
 {% block main %}
     <main class="col-md-8">
         <article class="post post-{{ post.pk }}">
@@ -20,27 +21,28 @@
         <section class="comment-area" id="comment-area">
             <hr>
             <h3>发表评论</h3>
-            <form action="#" method="post" class="comment-form">
-                <div class="row">
-                    <div class="col-md-4">
-                        <label for="id_name">名字：</label>
-                        <input type="text" id="id_name" name="name" required>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="id_email">邮箱：</label>
-                        <input type="email" id="id_email" name="email" required>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="id_url">网址：</label>
-                        <input type="text" id="id_url" name="url">
-                    </div>
-                    <div class="col-md-12">
-                        <label for="id_comment">评论：</label>
-                        <textarea name="comment" id="id_comment" required></textarea>
-                        <button type="submit" class="comment-btn">发表</button>
-                    </div>
-                </div>    <!-- row -->
-            </form>
+{#            <form action="#" method="post" class="comment-form">#}
+{#                <div class="row">#}
+{#                    <div class="col-md-4">#}
+{#                        <label for="id_name">名字：</label>#}
+{#                        <input type="text" id="id_name" name="name" required>#}
+{#                    </div>#}
+{#                    <div class="col-md-4">#}
+{#                        <label for="id_email">邮箱：</label>#}
+{#                        <input type="email" id="id_email" name="email" required>#}
+{#                    </div>#}
+{#                    <div class="col-md-4">#}
+{#                        <label for="id_url">网址：</label>#}
+{#                        <input type="text" id="id_url" name="url">#}
+{#                    </div>#}
+{#                    <div class="col-md-12">#}
+{#                        <label for="id_comment">评论：</label>#}
+{#                        <textarea name="comment" id="id_comment" required></textarea>#}
+{#                        <button type="submit" class="comment-btn">发表</button>#}
+{#                    </div>#}
+{#                </div>    <!-- row -->#}
+{#            </form>#}
+            {% comment_form  post %}
             <div class="comment-list-panel">
                 <h3>评论列表，共 <span>4</span> 条评论</h3>
                 <ul class="comment-list list-unstyled">
